# calculator_slint

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: ExampleApp.hpp
src/: CMakeLists.txt  main.cpp
src/model/: CalculatorModel.cpp  CalculatorModel.hpp  ExampleModel.cpp  ExampleModel.hpp
src/signals/: ScoppedConnection.hpp  Signal.hpp
src/view/: CalculatorView.slint  ExampleView.slint
src/viewmodel/: CalculatorViewModel.cpp  CalculatorViewModel.hpp  ExampleViewModel.cpp  ExampleViewModel.hpp
tests/: CMakeLists.txt  CalculatorModel_test.cpp
